fix(twitch): consent banner text contrast

--- a/styles/twitch/catppuccin.user.less
+++ b/styles/twitch/catppuccin.user.less
@@ -840,7 +840,8 @@
     .top-bar--pointer-enabled .consent-banner__content--gdpr-v2,
     .consent-banner {
       a,
-      button {
+      button,
+      p {
         color: @base !important;
       }
 
@@ -1269,6 +1270,7 @@
     /* Number badges */
     .tw-number-badge__badge,
     .tw-channel-status-text-indicator,
+    .vertical-selector__internal,
     .channel-status-info--live {
       color: @base;
     }
